syntax = "proto3";

option java_package = "grpc.temperature";
option java_multiple_files = true;
option java_outer_classname = "TempRoomImpl";

service temperature{


 rpc sendTemperature  (checkTemperature ) returns (temperatureAlarm ){}
}

message checkTemperature  {
float firstTemperature =1;
}

message temperatureAlarm {
string tempAlarm = 1;
}